--- a/todowebsite.html
+++ b/todowebsite.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<!--Cynthia -->
+<!--cc5469 -->
   <html>
     <head>
       <link rel="stylesheet" href="websitestyle.css">
-      <title>To Do</title>
+      <title>My Todo List</title>
     </head>
     <body id="mainpagebody">
       <ul class="topnav" id="myTopnav">
@@ -10,7 +12,7 @@
       <li><a href="https://calendar.google.com/calendar/b/1/r/month/2019/2/28?eid=NDR0MzN2OXF1ajBmcDMxc2hoMXBzaWVxZnMgY2M1NDY5QG55dS5lZHU&rst=1&ctz=America/New_York&hl=en&es=1&sf=true&response_updated=1">Calendar</a></li>
       <li><a href="https://github.com/">Other Projects</a></li>
       </ul>
-      <h1 id="mainpagetitle">To Do List</h1>
+      <h1 id="mainpagetitle">Cynthia's To Do List</h1>
       <table>
         <tr>
           <td>
@@ -19,7 +21,7 @@
           <td>
             <h2>Six Things You Didn't Do</h2>
             <ul id ="todolist">
-              <li>get gifts for professors</li>
+              <li>intro cs hw</li>
               <li>english hw</li>
               <li>math SG</li>
               <li>math email</li>
